# supriya

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  pyproject.toml
.github/actions/build-supercollider-linux/: action.yaml
.github/actions/build-supercollider-osx/: action.yaml
.github/actions/build-supercollider-windows/: action.yaml
.github/workflows/: publish.yml  test.yml
demos/: 01_sine.py  02_envelopes.py  03_subtractive.py  04_fm_synthesis.py  05_samples.py  06_effects.py  07_patterns.py  08_granular.py  09_chaos.py  10_generative.py
docs/: Makefile.new
patches/: apply_sc_patches.sh  sc-reentrant-world.patch
src/supriya/: __init__.py  _osc.cpp  _scsynth.cpp  _shm.cpp  osc.py  scsynth.py
src/supriya/contexts/: realtime.py  shm.py
tests/: conftest.py  test_examples.py  test_osc.py  test_scsynth.py
tests/book/: test_ext_book.py
tests/contexts/: conftest.py  test_Scope.py  test_Score_buffers.py  test_Score_render.py  test_ServerSHM.py  test_Server_buffers.py  test_Server_buses.py  test_Server_lifecycle.py  test_Server_misc.py  test_Server_nodes.py  test_Server_synthdefs.py  test_responses.py
tests/patterns/: test_BusAllocateEvent.py  test_BusFreeEvent.py  test_GroupAllocateEvent.py  test_NodeFreeEvent.py  test_NoteEvent.py  test_PatternPlayer.py  test_SynthAllocateEvent.py
tests/ugens/: test_SynthDef_ambisonics.py  test_SynthDef_basic.py  test_SynthDef_demand.py  test_SynthDef_expansion.py  test_SynthDef_mfcc.py  test_SynthDef_optimization.py  test_SynthDef_parameters.py  test_SynthDef_rngs.py  test_SynthDef_splay.py  test_SynthDef_system.py  test_SynthDef_width_first.py
