[project]
name = "supriya"
description = "A Python API for SuperCollider"
# dynamic = ["version"]
keywords = ["audio", "dsp", "music composition", "scsynth", "supercollider", "synthesis"]
license = {text = "MIT"}
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
  { name = "Joséphine Wolf Oberholtzer", email = "josephine.wolf.oberholtzer@gmail.com"},
  { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" },
]
classifiers = [
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
  "backports.strenum; python_version < '3.11'",
  "platformdirs >= 4.0.0",
  "psutil",
  "uqbar >= 0.9.6",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "pytest-lazy-fixtures>=1.0.0",
    "pytest-mock>=3.12",
    "ruff>=0.14.9",
    "standard-aifc; python_version >= '3.13'",
    "twine>=6.2.0",
]

# [project.optional-dependencies]
# docs = [
#   "supriya[examples]",
#   "jupyterlab",
#   "jupyterlab-rise",
#   "librosa",
#   "matplotlib",
#   "mypy",
#   "soxr",
#   "sphinx",
#   "sphinx-immaterial",
#   "sphinx-toolbox",
#   "sphinxext-opengraph",
#   "standard-aifc; python_version >= '3.13'",  # aifc removed in 3.13
#   "standard-sunau; python_version >= '3.13'",  # sunau removed in 3.13
# ]
# examples = [
#   "pynput",
#   "python-rtmidi",
# ]
# test = [
#   "IPython",
#   "librosa",
#   "lxml",
#   "matplotlib",
#   "mypy",
#   "pytest",
#   "pytest-asyncio",
#   "pytest-cov",
#   "pytest-lazy-fixtures",
#   "pytest-mock",
#   "pytest-rerunfailures",
#   "ruff",
#   "standard-aifc; python_version >= '3.13'",  # aifc removed in 3.13
#   "standard-sunau; python_version >= '3.13'",  # sunau removed in 3.13
#   "types-PyYAML",
#   "types-docutils",
#   "types-psutil",
#   "types-pynput",
# ]

[project.urls]
homepage = "https://github.com/supriya-project/supriya"
documentation = "https://supriya-project.github.io/supriya"
repository = "https://github.com/supriya-project/supriya"

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/supriya"]
cmake.args = []
cmake.define = {}
cmake.build-type = "Release"
cmake.source-dir = "."
sdist.include = ["vendor/"]
sdist.exclude = []
wheel.exclude = ["*.cpp", "*.c", "*.h", "*.hpp"]

[tool.cibuildwheel]
build = "cp3{10,11,12,13}-*"
test-command = [
  # Only double-quotes work on Windows.
  'python -c "from supriya.contexts import shm; print(shm.__file__)"',
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["supriya.ext.mypy"]

[tool.pytest.ini_options]
addopts = [
  "--cov-branch",
  "--cov-report=html",
  "--cov-report=term",
  "--doctest-modules",
  "-rf",
  "-vv",
]
asyncio_default_fixture_loop_scope = "function"
doctest_optionflags = [
  "ELLIPSIS"
]
log_format = "%(asctime)s.%(msecs)03d %(name)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
  "sphinx: mark a test as a Sphinx test."
]
testpaths = [
  "tests",
  "src/supriya",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88
